continue to play with caches

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,7 @@ jobs:
         - $HOME
       script: bash -c 'echo "it is my message" > myfile; cat myfile'
     - stage: read
+      cache:
+        directories:
+        - $HOMR
       script: bash -c 'cat myfile'
