let's see what is going on with dejagnu

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,13 @@ jobs:
         directories:
         - $HOME
       script: bash -c 'echo "it is my message" > myfile; cat myfile'
+    - stage: dejagnu lookup
+      apt:
+        packages:
+        - dejagnu
+      script: bash -c 'runtest my.exp'
     - stage: read
       cache:
         directories:
-        - $HOMR
+        - $HOME
       script: bash -c 'cat myfile'
