--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,7 @@ jobs:
       env:
       - MESSAGE='its my other message'
       script: bash -c 'runtest my.exp'
+    - stage: dejagnu lookup
+      script: bash -c 'runtest my.exp'
     - stage: read
       script: bash -c 'cat myfile'
