--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,6 @@ jobs:
       env:
       - MESSAGE='its my other message'
       script: bash -c 'runtest my.exp'
-    - stage: dejagnu lookup
-      script: bash -c 'runtest my.exp'
+    - script: bash -c 'runtest my.exp'
     - stage: read
       script: bash -c 'cat myfile'
